<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="Edit"
            android:textOff="Visit" />

        <Spinner
            android:id="@+id/edition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/new_track"
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/new_track_label" />

        <ImageButton
            android:id="@+id/extend_score"
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/extend_score_label" />

        <ImageButton
            android:id="@+id/trim_score"
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_crop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/trim_score_label" />

        <Spinner
            android:id="@+id/resolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <Spinner
            android:id="@+id/bars_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/play"
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/play_button_label" />

        <ImageButton
            android:id="@+id/stop"
            style="?android:attr/buttonStyleSmall"
            android:src="@drawable/ic_stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stop_button_label" />

    </LinearLayout>

    <joel.duet.musica.ScoreView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/score_view"/>

</LinearLayout>